; ModuleID = '/home/carl/AnghaBench/freebsd/gnu/usr.bin/gdb/libgdb/extr_fbsd-threads.c_fbsd_thread_find_new_threads.c'
source_filename = "/home/carl/AnghaBench/freebsd/gnu/usr.bin/gdb/libgdb/extr_fbsd-threads.c_fbsd_thread_find_new_threads.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@fbsd_thread_active = common dso_local global i32 0, align 4
@thread_agent = common dso_local global i32 0, align 4
@find_new_threads_callback = common dso_local global i32 0, align 4
@TD_THR_ANY_STATE = common dso_local global i32 0, align 4
@TD_THR_LOWEST_PRIORITY = common dso_local global i32 0, align 4
@TD_SIGNO_MASK = common dso_local global i32 0, align 4
@TD_THR_ANY_USER_FLAGS = common dso_local global i32 0, align 4
@TD_OK = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [28 x i8] c"Cannot find new threads: %s\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @fbsd_thread_find_new_threads to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @fbsd_thread_find_new_threads() #0 {
  %1 = alloca i64, align 8
  %2 = load i32, i32* @fbsd_thread_active, align 4
  %3 = icmp ne i32 %2, 0
  br i1 %3, label %5, label %4

4:                                                ; preds = %0
  br label %20

5:                                                ; preds = %0
  %6 = load i32, i32* @thread_agent, align 4
  %7 = load i32, i32* @find_new_threads_callback, align 4
  %8 = load i32, i32* @TD_THR_ANY_STATE, align 4
  %9 = load i32, i32* @TD_THR_LOWEST_PRIORITY, align 4
  %10 = load i32, i32* @TD_SIGNO_MASK, align 4
  %11 = load i32, i32* @TD_THR_ANY_USER_FLAGS, align 4
  %12 = call i64 @td_ta_thr_iter_p(i32 %6, i32 %7, i32* null, i32 %8, i32 %9, i32 %10, i32 %11)
  store i64 %12, i64* %1, align 8
  %13 = load i64, i64* %1, align 8
  %14 = load i64, i64* @TD_OK, align 8
  %15 = icmp ne i64 %13, %14
  br i1 %15, label %16, label %20

16:                                               ; preds = %5
  %17 = load i64, i64* %1, align 8
  %18 = call i32 @thread_db_err_str(i64 %17)
  %19 = call i32 @error(i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str, i64 0, i64 0), i32 %18)
  br label %20

20:                                               ; preds = %4, %16, %5
  ret void
}

declare dso_local i64 @td_ta_thr_iter_p(i32, i32, i32*, i32, i32, i32, i32) #1

declare dso_local i32 @error(i8*, i32) #1

declare dso_local i32 @thread_db_err_str(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
